02-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    purpose: pod-practice
    project: roboshop
    environment: dev
spec:
  containers:
  - name: nginx
    image: nginx:latest
