03-multi-containers.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    project: roboshop
    environment: dev
    purpose: multi-containers-practice
spec:
  containers:
  - name: nginx
    image: nginx:latest
