04-labels.yaml
apiVersion: v1
kind: Pod
metadata:
  name: labels
  labels:
    project: roboshop
    environment: dev
    purpose: labels-practice
    tier: DB
spec:
  containers:
  - name: nginx
    image: nginx:latest
