06-resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: resources
  labels:
    project: roboshop
    environment: dev
spec:
  containers:
  - name: nginx
    image: nginx:latest
    resources:
      requests:  # soft limit
        memory: "64Mi"
        cpu: "100m"
      limits:     # hard limit
        memory: "128Mi"
        cpu: "150m"
