07-environment.yaml
apiVersion: v1
kind: Pod
metadata:
  name: environment
  labels:
    purpose: env-practice
    project: roboshop
    environment: dev
spec:
  containers:
  - name: nginx
    image: nginx:latest
