11-pod-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-secret
  labels:
    purpose: secret-practice
spec:
  containers:
  - name: nginx
    image: nginx:latest
