12-service-cluster.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    purpose: service-cluster-practice
    project: roboshop
    environment: dev
spec:
  containers:
  - name: nginx
    image: nginx:latest

---

apiVersion: v1
kind: Service 
metadata:
  name: cluster-svc 
  labels:
    purpose: service-cluster-practice
spec:
  selector:
    purpose: service-cluster-practice
    project: roboshop
    environment: dev
  ports:
  - protocol: TCP
    port: 80      # service port
    targetPort: 80  # container port
