13-service-np.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-np
  labels:
    purpose: service-np-practice
    project: roboshop
    environment: dev
spec:
  containers:
  - name: nginx
    image: nginx:latest

---

apiVersion: v1
kind: Service
metadata:
  name: service-np
  labels:
    purpose: service-np-practice
spec:
  type: nodePort
  selector:
    purpose: service-np-practice
    project: roboshop
    environment: dev
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
