14-service-lb.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-lb 
  labels:
    purpose: service-lb-practice
    project: roboshop
    environment: dev
spec:
  containers:
  - name: nginx
    image: nginx:latest

---

apiVersion: v1
kind: Service
metadata:
  name: service-lb
  labels:
    purpose: service-lb-practice
spec:
  type: LoadBalancer
  selector:
    purpose: service-lb-practice
    project: roboshop
    environment: dev
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
