16-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
# these are deployment labels
  labels:
    purpose: deployment-practice
    project: roboshop
    environment: dev
spec:
  replicas: 3
# these are the labels replicaset use to create pod replicas, this should match the pod labels
  selector:
    matchLabels:
      purpose: deployment-practice
      project: roboshop
      environment: dev
# this is pod definition
  template:
    metadata:
      labels:
        purpose: deployment-practice
        project: roboshop
        environment: dev
    spec:
      containers:
      - name: nginx
        image: nginx:stable-perl
---
apiVersion: v1
kind: Service 
metadata:
  name: deployment-svc 
  labels:
    purpose: deployment-practice
    project: roboshop
    environment: dev
spec:
  type: LoadBalancer
  selector:
    purpose: deployment-practice
    project: roboshop
    environment: dev
  ports:
  - protocol: TCP
    port: 80      # service port
    targetPort: 80  # container port
