17-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: statefulset-headless-svc
  labels:
    purpose: statefulset-practice
    project: roboshop
spec:
  ports:
  - port: 80
    name: web
  clusterIP: None
  selector:
    purpose: statefulset-practice
    project: roboshop
---
apiVersion: v1
kind: Service
metadata:
  name: statefulset-svc
  labels:
    purpose: statefulset-practice
    project: roboshop
spec:
  ports:
  - port: 80
    name: web
  selector:
    purpose: statefulset-practice
    project: roboshop
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: statefulset
spec:
  # nodeSelector:
  #   topology.kubernetes.io/zone : us-east-1c
  selector:
    matchLabels:
      purpose: statefulset-practice
      project: roboshop # has to match .spec.template.metadata.labels
  serviceName: "statefulset-headless-svc"  # headless service name
  replicas: 3 # by default is 1
  template:
    metadata:
      labels:
        purpose: statefulset-practice
        project: roboshop # has to match .spec.selector.matchLabels
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        volumeMounts:
        - name: www
          mountPath: /usr/share/nginx/html
  volumeClaimTemplates:
  - metadata:
      name: www
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "ebs-dynamic-sc"   # here we used ebs dynamic
      resources:
        requests:
          storage: 2Gi
